<resources>
    <string name="app_name">Gnr26AndroidFri6_Sat7</string>
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="i_accept_tnc">I accept TnC</string>
    <string name="submit">Submit</string>
    <string name="upper">UPPER</string>
    <string name="reverse">REVERSE</string>
    <string name="enter_n1">Enter n1</string>
    <string name="add">ADD</string>
    <string name="subtract">SUBTRACT</string>
    <string name="multiply">MULTIPLY</string>
    <string name="enter_n2">Enter n2</string>
    <string name="new_user">New User ?</string>
    <string name="save">Save</string>
    <string name="list_student">List Student</string>
    <string name="start_game">Start Game</string>
</resources>