<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputDataActivity"
    android:background="#DCAC5A"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtInputDataFirstName"
        android:hint="@string/firstname"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnInputDataSave"
        android:text="@string/save"
        android:layout_below="@id/edtInputDataFirstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E64A19"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvInputDataLinkForListStudent"
        android:text="@string/list_student"
        android:layout_below="@id/btnInputDataSave"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="8pt"
        android:textColor="#303F9F"
        />
</RelativeLayout>